--- a/models/staging/_sources.yml
+++ b/models/staging/_sources.yml
@@ -2,8 +2,7 @@ version: 2
 
 sources:
   - name: keboola
-    description: Tables from Keboola Storage loaded into workspace
-    schema: "{{ env_var('DBT_KBC_DEV_SCHEMA') }}"
+    description: Tables from Keboola Storage loaded into workspace via input mapping
     tables:
       - name: fake_client
         description: Raw client data from fake extractor
