--- a/models/staging/_sources.yml
+++ b/models/staging/_sources.yml
@@ -2,9 +2,9 @@ version: 2
 
 sources:
   - name: raw
-    description: Tables from Keboola Storage loaded into workspace via input mapping
+    description: Tables from Keboola Storage bucket
     database: "{{ target.database }}"
-    schema: "{{ target.schema }}"
+    schema: "out.c-mso_dev_dbt_test"
     tables:
       - name: fake_client
         description: Raw client data from fake extractor
