Add quoting to sources to handle schema with dashes
Made-with: Cursor

--- a/models/staging/_sources.yml
+++ b/models/staging/_sources.yml
@@ -4,7 +4,11 @@ sources:
   - name: raw
     description: Tables from Keboola Storage bucket
     database: "{{ target.database }}"
-    schema: "out.c-mso_dev_dbt_test"
+    schema: out.c-mso_dev_dbt_test
+    quoting:
+      database: true
+      schema: true
+      identifier: true
     tables:
       - name: fake_client
         description: Raw client data from fake extractor
