--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -5,9 +5,16 @@ config-version: 2
 profile: 'user'
 
 model-paths: ["models"]
+test-paths: []  # Disable discovery of external tests
+seed-paths: []  # Disable seeds
+snapshot-paths: []  # Disable snapshots
 
-# Exclude auto-generated sources from dbt runs
 models:
   mso_dev_dbt_project:
-    _sources:
-      +enabled: false
+    staging:
+      +materialized: table
+      +schema: staging
+    marts:
+      +materialized: incremental
+      +on_schema_change: sync_all_columns
+      +schema: marts
